[package]
name = "core-graphics"
description = "Bindings to Core Graphics for OS X"
homepage = "https://github.com/servo/core-graphics-rs"
repository = "https://github.com/servo/core-graphics-rs"
version = "0.12.5"
authors = ["The Servo Project Developers"]
license = "MIT / Apache-2.0"

[features]
default = []
elcapitan = []

[dependencies]
bitflags = "1.0"
core-foundation = { version = "0.5", git = "https://github.com/faern/core-foundation-rs", branch = "tcftype-ref-as-associated" }
foreign-types = "0.3.0"
libc = "0.2"
